body overflow fix

--- a/styles/general.css
+++ b/styles/general.css
@@ -87,6 +87,8 @@ nav {
     width: 100%;
     background-color: rgb(0,0,0,0);
     transition: right 300ms ease-in 300ms, background-color 300ms ease-out;
+    overflow: hidden;
+    /* overflow: hidden last change, check after test */
 }
 
 .menu > div {
